# ChaineMarkov

./: CMakeLists.txt  Linux_Execution.sh  Readme.txt  Window_Execution.bat
data/: a.txt  exemple1_chatGPT_fixed_graph.mmd  exemple1_chatGPT_fixed_hasse.mmd  exemple1_graph.mmd  exemple1_hasse.mmd  exemple1_hasse.txt  exemple1_mermaid.txt  exemple2_graph.mmd  exemple2_hasse.mmd  exemple3_graph.mmd  exemple3_hasse.mmd  exemple_meteo.txt  exemple_meteo_graph.mmd  exemple_meteo_hasse.mmd  exemple_meteo_hasse.txt  exemple_meteo_mermaid.txt  exemple_valid_step3.txt  exemple_valid_step3_graph.mmd  exemple_valid_step3_hasse.mmd  exemple_valid_step3_hasse.txt  exemple_valid_step3_mermaid.txt
inc/: hasse.h  list.h  matrix.h  tarjan.h  utils.h
src/: hasse.c  list.c  main.c  matrix.c  tarjan.c  utils.c
